# AI-POC-Contract-Generator-Checker

./: .gitignore  .kilocodemodes  AI-Engine-Research-Report.md  AI_FRAMEWORK_RECOMMENDATIONS.md  APPENDIX.md  ARCHITECTURE.md  BMAD-GETTING-STARTED.md  BMAD-OPENSPEC-INTEGRATION.md  BMAD-QUICK-START.md  BMAD_IMPLEMENTATION_REPORT.md  BMAD_TEST_REVIEW_REPORT.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOY_INSTRUCTIONS.md  FINAL_DEMO_SUMMARY.md  FINAL_SUMMARY.md  FRAMEWORK-COMPARISON-SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS_SUMMARY.md  KNOWLEDGE_BASE_DOUBLE_REVIEW_REPORT.md  LLM_DEPLOYMENT_OPTIONS_RESEARCH_2026.md  MIGRATION_PLAN.md  OCR_DIAGNOSTIC_REPORT.md  PDF_REMOVAL_SUMMARY.md  PLAYWRIGHT_TEST_REPORT.md  POC_COMPREHENSIVE_TEST_REPORT.md  PROCESSING_SUMMARY.md  PROJECT_OVERVIEW_FOR_MANAGERS.md  QUICK-START-GUIDE.md  QUICK_DEPLOY_GUIDE.md  QUICK_RUN_GUIDE.md  QUICK_START.md  README-FRAMEWORKS.md  README.md  RESEARCH_STORIES_COMPLETION_REPORT.md  SETUP_VERIFICATION.md  SIMPLIFIED_POC_PLAN.md  STRUCTURE.md  SYSTEM_SCOPE_CLARIFICATION.md  TABLE_DATA_REVIEW.md  (+52 more)
.antigravity/: settings.json
.claude/: settings.local.json
.kiro/: settings.json
.kiro/hooks/: auto-translate-localization.kiro.hook  code-quality-analyzer.kiro.hook  docs-sync-on-change.kiro.hook
.kiro/steering/: ai-contract-generator-mcp-tools.md
.streamlit/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmgd/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
docs/: BMAD_Documentation_Summary.md  FRAMEWORK-DECISION-MATRIX.md  TESSERACT_INSTALLATION_GUIDE.md
files/: AIEcon Ras ElHekma Tech..docx  AIEcon Ras ElHekma Tech.docx  NDC Hydroprojects 2025, Technical (1).docx  العرض الفني والمالي لتصميم الروؤس الحجرية رأس سدر .docx
openspec/: project.md
poc_implementation/: README.md  config.json  main.py  proposal_engine_poc.py  requirements.txt  setup.py  test_poc.py  workflow.py
poc_implementation/templates/: proposal_template.docx
research_stories/RS-04/: README.md
research_stories/RS-05/: README.md
research_stories/RS-06/: README.md
research_stories/RS-07/: README.md
research_stories/RS-08/: README.md
research_stories/RS-09/: README.md
research_stories/RS-10/: README.md
research_stories/RS-11/: README.md
research_stories/RS-12/: README.md
research_stories/RS-13/: README.md
research_stories/RS-14/: README.md
research_stories/RS-15/: README.md
research_stories/RS-16/: README.md
research_stories/RS-17/: README.md
research_stories/RS-18/: README.md
research_stories/RS-19/: README.md
research_stories/RS-20/: README.md
research_stories/RS-21/: README.md
research_stories/RS-22/: README.md
scripts/: create_poc_template.py  create_test_docx.py  migrate_kb.py
src/: __init__.py  llm_fallback.py
templates/: poc_template.docx
tests/: __init__.py
(+49 files in other folders)
