[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine-proposal-generator"
version = "0.1.0"
description = "AI Engine for Civil Engineering Proposal Generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Engine Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Vector Database
    "qdrant-client>=1.7.0",
    
    # LLM & RAG
    "langchain>=0.1.0",
    "llama-index>=0.9.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    
    # Document Processing
    "pymupdf4llm>=0.0.5",
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "weasyprint>=60.0",
    
    # NLP - Arabic
    "camel-tools>=1.5.0",
    
    # NLP - General
    "sentence-transformers>=2.3.0",
    "langdetect>=1.0.9",
    "transformers>=4.45.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    
    # Caching
    "redis>=5.0.0",
    
    # Utilities
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

hydraulic = [
    # HEC-RAS integration
    "ras-commander>=0.1.0",
    # SWMM integration
    "pyswmm>=1.5.0",
]

[project.scripts]
ai-engine = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hypothesis]
max_examples = 100
deadline = 5000
suppress_health_check = ["too_slow"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hypothesis
    | \.pytest_cache
    | __pycache__
    | \.venv
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
